# Informatique-TP

./: .gitmodules  CMakeLists.txt  README.md  annotated.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  ejovo__comp_8h_source.html  ejovo__comp__matrix_8h.html  ejovo__comp__matrix_8h_source.html  ejovo__input_8h_source.html  ejovo__labyrinth_8h_source.html  ejovo__list_8h_source.html  ejovo__matrix_8h.html  ejovo__matrix_8h_source.html  ejovo__print_8h.html  ejovo__print_8h_source.html  ejovo__rand_8h.html  ejovo__rand_8h_source.html  ejovo__simulation_8h_source.html  ejovo__sort_8h_source.html  ejovo__string_8h.html  ejovo__string_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  hw__printer_8h_source.html  index.html  menudata.js  structcell__stack__t-members.html  structcell__stack__t.html  structcell__t-members.html  structcell__t.html  structcomp__mat__t-members.html  structcomp__mat__t.html  structcomplex__t-members.html  structcomplex__t.html  structlabyrinth__piece__t-members.html  structlabyrinth__piece__t.html  (+24 more)
.github/workflows/: Mac.yml  Ubuntu.yml
inc/: ejovo_matrix.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_a.js  functions_b.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_4.js
src/: CMakeLists.txt
src/TP2/: ex10.c
src/ejovo/matrix/: matrix_compute.c  matrix_core.c  matrix_foreach.c  matrix_iter.c
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  foreach_operations.c
test/matrix/: CMakeLists.txt  mat_compute.c
